[package]
name = "resp"
version = "0.1.0"
authors = ["laik <laik.lj@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.parser]
path = "../parser"

[dependencies]
tokio-io = { version = "0.1"}
tokio-codec = "0.1"
linked-hash-map = "0.5"