[package]
name = "server"
version = "0.1.0"
authors = ["laik <laik.lj@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.dbpool]
path = "../dbc"

[dependencies]
net2 = { version = "0.2.33", features = ["nightly"] }

[target.x86_64-unknown-linux-gnu.dependencies]
libc ="0.1.8"
unix_socket = "0.5.0"

[target.x86_64-apple-darwin.dependencies]
libc ="0.1.8"
unix_socket = "0.5.0"

